@@ -1,3 +1,8 @@
+2003-10-12  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/flash.c (fis_create): Verify that any hard FLASH addresses
+	(given via -f XXX) are known to be free.
+
 2003-10-11  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/flash.c: 
